# WatsonPipelines

./: .gitignore  pyproject.toml
dags/: first_dag.py
